<?xml version="1.0" encoding="utf-8"?>

<!--Portrait/standard layout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/user_input"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="30dp"
                android:text="@string/from" />

            <!--From Button group-->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:id="@+id/from_radio_group" >


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/from_celsius"
                    android:textSize="30dp"
                    android:text="@string/celsius"/>


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:textSize="30dp"
                    android:text="@string/fahrenheit"
                    android:id="@+id/from_fahrenheit"/>


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/from_kelvin"
                    android:textSize="30dp"
                    android:text="@string/kelvin" />




            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:layout_gravity="left"
                android:text="@string/to"/>


            <!--To button Group-->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:id="@+id/to_radio_group">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/to_celsius"
                    android:textSize="30dp"
                    android:text="@string/celsius"/>


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/to_fahrenheit"
                    android:textSize="30dp"
                    android:text="@string/fahrenheit"/>


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:id="@+id/to_kelvin"
                    android:textSize="30dp"
                    android:text="@string/kelvin"/>


            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/convert_button"
        android:textSize="30dp"
        android:text="@string/convert_button"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/conversion_output"
        android:textSize="30dp"
        android:padding="15dp"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/equation_output"
        android:textSize="15dp"
        android:padding="10dp"
        android:gravity="center_horizontal"/>
</LinearLayout>
